<resources>
    <string name="app_name">Indah</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productos">PRODUCTOS</string>
    <string name="ventas">VENTAS</string>
    <string name="gestion">GESTION</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="nombre">Nombre del producto</string>
    <string name="codigo">Codigo</string>
    <string name="unidad">Unidad</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_reserva">Cantidad reserva</string>
    <string name="precio_compra">Precio compra</string>
    <string name="precio_venta">Precio venta</string>
    <string name="descripcion">Descripcion</string>
    <string name="la_cantidad_es_mayor_a_la_que_hay_en_stock">La cantidad es mayor a la que hay en stock</string>
    <string name="subtotal">Subtotal</string>
    <string name="cliente">Cliente</string>
    <string name="clientes">Clientes</string>
    <string name="forma_de_pago">Forma de pago…</string>
    <string name="informacion_adicional_de_la_venta">Informacion adicional de la venta</string>
    <string name="terminar_venta">Terminar venta</string>
    <string name="pago_inicial">Pago inicial</string>
    <string name="deuda">Deuda:</string>
    <string name="_100">$100</string>

    <string name="urlEjemplo">https://d26lpennugtm8s.cloudfront.net/stores/440/495/products/mick-crack-adelante1-4641d170347183af5915808207950663-1024-1024.png</string>
    <string name="ventas_por_cobrar">Ventas por cobrar</string>
    <string name="historial_de_ventas">Historial de ventas</string>
    <string name="celular">Celular</string>
    <string name="direccion">Direccion</string>
    <string name="informacion_adicional">Informacion adicional</string>
    <string name="pagos_realizados">Pagos realizados</string>
    <string name="peso">$</string>
    <string name="confirmar_el_pago_de_la_deuda">Confirmar el pago de la deuda</string>
    <string name="error_al_escanear">No se pudo escanear el codigo</string>
    <string name="ganancia">Ganancia</string>
    <string name="error_cargar_vista_con_producto">No se pudo cargar el producto</string>
    <string name="error_insertar_producto">Error al insertar</string>
    <string name="temp_url">TEMP_PHOTO_FILE</string>
    <string name="escanear_codigo">Escanear codigo</string>
    <string name="cero_pesos">0</string>
    <string name="total_mas_peso">Total $</string>
    <string name="por_cobrar">Por cobrar</string>
    <string name="pagado">Pagado</string>
    <string name="error_no_cargo_producto">No se pudo cargar el producto</string>
    <string name="error_al_calcular">No es posible calcular eso</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="otra_forma_de_pago">Otra forma de pago</string>
    <string name="error_cargar_productos">Error al cargar la lista de productos</string>
    <string name="producto_ya_agregado">Este producto ya esta agregado</string>
    <string name="error_creacion_venta">Ocurrio un error al crear la venta!</string>
    <string name="venta_exitosa">Venta realizada con exito!</string>
    <string name="no_se_escaneo_codigo">No se pudo escanear codigo</string>
    <string name="fecha_falsa">00/00/0000</string>
</resources>
