<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._view_ui.fragments.verProducto.VisualizadorProductoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contraintPadreVisualizadorProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textViewCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/codigo"
            app:layout_constraintStart_toStartOf="@+id/textViewNombre"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

        <TextView
            android:id="@+id/textViewCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cantidad"
            app:layout_constraintStart_toStartOf="@+id/textViewCodigo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCodigo" />

        <TextView
            android:id="@+id/textViewReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cantidad_reserva"
            app:layout_constraintStart_toStartOf="@+id/textViewCantidad"
            app:layout_constraintTop_toBottomOf="@+id/textViewCantidad" />

        <TextView
            android:id="@+id/textViewCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/precio_compra"
            app:layout_constraintStart_toStartOf="@+id/textViewReserva"
            app:layout_constraintTop_toBottomOf="@+id/textViewReserva" />

        <TextView
            android:id="@+id/textViewVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/precio_venta"
            app:layout_constraintStart_toStartOf="@+id/textViewCompra"
            app:layout_constraintTop_toBottomOf="@+id/textViewCompra" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/descripcion"
            app:layout_constraintStart_toStartOf="@+id/textViewVenta"
            app:layout_constraintTop_toBottomOf="@+id/textViewVenta" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonEditarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>