<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="._view_ui.fragments.configVenta.ConfigVentaFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutConfigVenta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:elevation="100dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/styleTextViewFondoOscuroTitle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_mas_peso"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTotalVenta"
                    style="@style/styleTextViewFondoOscuroTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cero_pesos"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <RadioButton
                android:id="@+id/radioButtonCobrar"
                style="@style/styleTextViewFondoOscuroTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blanco"
                android:text="@string/por_cobrar" />

            <RadioButton
                android:id="@+id/radioButtonPagado"
                style="@style/styleTextViewFondoOscuroTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blanco"
                android:text="@string/pagado" />

            <LinearLayout
                android:id="@+id/linearLayoutContentConfigACobrar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/gradiente_color_2_3"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blanco"
                    android:hint="@string/pago_inicial"
                    android:orientation="horizontal"
                    android:textColorHint="@color/blanco"
                    app:hintTextColor="@color/blanco">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittextPagoInicial_venta"
                        style="@style/styleEditTextFondoOscuroTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorUno"
                        android:inputType="number"
                        android:textColorHint="@color/blanco"
                        app:hintTextColor="@color/blanco" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/styleTextViewFondoOscuroTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deuda"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewDeudaRestante"
                        style="@style/styleTextViewFondoOscuroTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenEdittextFormaPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/forma_de_pago"
                    android:orientation="horizontal"
                    android:textColorHint="@color/blanco"
                    app:hintTextColor="@color/blanco">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittextFormaPago_venta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColorHint="#0072BA"
                        android:theme="@style/styleEditTextFondoOscuroTitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageViewSelectFormaPago"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_typepay"
                    app:tint="@color/blanco" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/informacion_adicional_de_la_venta"
                android:orientation="horizontal"
                android:textColorHint="@color/blanco"
                app:hintTextColor="@color/blanco">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextDescripcion_venta"
                    style="@style/styleTextViewFondoOscuroTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content_edittextCliente_venta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cliente"
                android:orientation="horizontal"
                android:textColorHint="@color/blanco"
                app:hintTextColor="@color/blanco">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextCliente_venta"
                    style="@style/styleTextViewFondoOscuroTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewClientes_ventas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorUno"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buttonTerminarVenta"
                    style="@style/styleTextViewFondoOscuroTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/terminar_venta"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:src="@drawable/ic_saled" />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentSelectFormaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondoItemHistorial"
            android:elevation="200dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewTitleSeleccionePago"
                style="@style/styleTextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forma_de_pago"
                android:textColor="@color/azul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleSeleccionePago"
                app:layout_constraintVertical_bias="0.060000002">

                <RadioButton
                    android:id="@+id/radioEfectivo"
                    style="@style/styleRadioButtonVentas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/efectivo" />

                <RadioButton
                    android:id="@+id/radioTarjeta"
                    style="@style/styleRadioButtonVentas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarjeta" />

                <RadioButton
                    android:id="@+id/radioOtras"
                    style="@style/styleRadioButtonVentas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/otra_forma_de_pago" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>