<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context="._view_ui.fragments.gestion.GestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintPadre_gestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewHistorialVentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_de_ventas"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/textViewClientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewVentasPorCobrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHistorialVentas"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/textViewVentasPorCobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ventas_por_cobrar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHistorialVentas" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>